# debhello

./: .gitignore  README.md
debian/: README.Debian  changelog  control  copyright  debhello.lintian-overrides  rules
debian/patches/: series  up-copyright.patch  up-packaging_deb.patch
deploy/: packaging_deb.sh
lab-0/: Makefile
lab-0/debian/: README.Debian
lab-0/deploy/: packaging_deb.sh
lab-1/: README.md
lab-1/debian/: README.Debian  changelog  copyright  debhello.bug-control.ex  debhello.bug-presubj.ex  debhello.bug-script.ex  debhello.cron.hourly.ex  debhello.lintian-overrides
lab-10/: CMakeLists.txt  Makefile.am  README.md  configure.ac
lab-10/debian/: README.Debian  copyright  rules
lab-10/src/: Makefile.am
lab-11/: CMakeLists.txt  Makefile.am  README.md  configure.ac
lab-11/debian/: README.Debian  changelog  control  copyright  rules
lab-12/: CMakeLists.txt  README.md
lab-12/debian/: README.Debian  control
lab-12/lib/: CMakeLists.txt
lab-12/src/: CMakeLists.txt
lab-13/: ChangeLog  Makefile.am  README.md  configure.ac
lab-13/data/: Makefile.am
lab-13/debian/: README.Debian  changelog  copyright
lab-13/lib/: sharedlib.c
lab-13/po/: ChangeLog  Makevars  debhello.pot  zh_CN.gmo  zh_CN.po
lab-14/: README.md
lab-14/hideb-1.0/: Makefile  hithere  hithere.c
lab-2/: README.md
lab-2/debian/: control  debhello.cron.d.ex  debhello.cron.daily.ex  debhello.cron.monthly.ex  debhello.cron.weekly.ex  debhello.default.ex  debhello.dirs.ex  debhello.emacsen-install.ex  debhello.emacsen-remove.ex  debhello.emacsen-startup.ex  debhello.init.ex  debhello.service.ex  debhello.tmpfile.ex  manpage.1.ex  manpage.asciidoc.ex  manpage.sgml.ex  manpage.xml.ex
lab-3/: README.md
lab-3/debian/: README.Debian  changelog  control  copyright  rules
lab-4/: MANIFEST.in  Makefile  README.md  setup.cfg
lab-4/debian/: README.Debian  changelog  control  copyright  rules
lab-4/src/debhello/: __main__.py
lab-5/: README.md  setup.cfg
lab-5/debian/: README.Debian  changelog  control  copyright  rules
lab-6/: Makefile  README.md
lab-7/: Makefile  Makefile.in  README.md  configure
lab-8/: Makefile.in  README.md  configure.ac
lab-9/: README.md  configure.ac
(+32 files in other folders)
