[metadata]
name = debhello
version = attr: debhello.__version__
description = Hello Python (CLI)
long_description = file: README.md
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: Developers
        Topic :: System :: Archiving :: Packaging
        License :: OSI Approved :: MIT License
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
author = Osamu Aoki
author_email = osamu@debian.org
maintainer = Osamu Aoki
maintainer_email = osamu@debian.org
url = https://salsa.debian.org/debian/debmake-doc
project_urls =
        Documentation = https://salsa.debian.org/debian/debmake-doc
keywords = debhello
license = MIT

[options]
package_dir =
        = src
packages = find:
python_requires = >=3.4
setup_requires = setuptools >= 42

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        hello = debhello.__main__:main
